--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@types/node": "^14.14.16",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "date-fns": "^2.16.1"
   }
 }
