--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "how-old-is-it",
   "version": "1.0.0",
   "description": "How old is this repo",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "bin": {
+    "hoit": "./lib/index.js"
+  },
+  "files": [
+    "lib/index.js",
+    "package.json",
+    "package-lock.json"
+  ],
   "scripts": {
+    "prepublishOnly": " tsc src/index  --outDir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
